--- a/classwork/Resaurant/Menu.html
+++ b/classwork/Resaurant/Menu.html
@@ -54,19 +54,18 @@
             <li data-target="#news_carousel" data-slide-to="2" class="colour"></li>
           </ul>
 
-          <div class="center " style="width:100%; height:100% ">
-            <div class="carousel-inner" style="border:solid black;">
-              <div class="carousel-item active" style=" background-color:blue;">
+          <div class="carousel-inner center">
+            <div class="carousel-item active">
+              <a href="https://www.google.com/maps/place/Jinseon+Korean+BBQ+Restaurant+%26+Bar/@52.40996,-1.5103307,17z/data=!3m1!4b1!4m5!3m4!1s0x48774bbb8c749dc1:0x41808c4fa13b7504!8m2!3d52.40996!4d-1.508142" target="_blank">
                 <strong><i class="fas fa-people-carry"></i> We're opening a new location! <i class="fas fa-people-carry"></i></strong>
-              </div>
-              <div class="carousel-item Christmas">
-                <strong>We're rolling out our seasonal menu, with special options for this season.</strong>
-              </div>
-              <div class="carousel-item">
-                <strong> <i class="fas fa-cocktail"></i> The Drink of the Month is TSG Special Brew. <i class="fas fa-cocktail"></i></strong>
-              </div>
+              </a>
             </div>
-
+            <div class="carousel-item christmas" >
+              <strong>We're rolling out our seasonal menu, with special options for this season.</strong>
+            </div>
+            <div class="carousel-item">
+              <strong> <i class="fas fa-cocktail"></i> The Drink of the Month is TSG Special Brew. <i class="fas fa-cocktail"></i></strong>
+            </div>
           </div>
 
           <a class="carousel-control-prev" href="#news_carousel" data-slide="prev" style="z-index:3; color:black; font-size:30px;">
@@ -78,64 +77,79 @@
 
         </div>
 
+        <div class="page-title">
+          <h4> Menu </h4>
+        </div>
 
-        <h4> Menu </h4>
-
-        <div class="container" style="text-align:center">
-          <h4>Meat</h4>
-          <div class="row">
-            <div class="col-lg-3 col-md-3 col-sm-12">
-              <p><strong>BBQ Pork Belly</strong> <br>£8.20</p>
+        <div class="" style="text-align:center">
+          <div class="menu-section">
+            <div class="menu-heading">
+              <h4>Meat</h4>
             </div>
-            <div class="col-lg-1 col-md-1 col-sm-12">
-              <hr/>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-              <p><strong>New York Style Chicken</strong> <br>£7.80</p>
-            </div>
-            <div class="col-lg-1 col-md-1 col-sm-12">
-              <hr/>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-12">
-              <p><strong>Beef Strips</strong> <br>£8.50</p>
+            <div class="row">
+              <div class="col-lg-3 col-md-3 col-sm-12">
+                <p><strong>BBQ Pork Belly</strong> <br>£8.20</p>
+              </div>
+              <div class="col-lg-1 col-md-1 col-sm-12">
+                <hr/>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-12">
+                <p><strong>New York Style Chicken</strong> <br>£7.80</p>
+              </div>
+              <div class="col-lg-1 col-md-1 col-sm-12">
+                <hr/>
+              </div>
+              <div class="col-lg-3 col-md-3 col-sm-12">
+                <p><strong>Beef Strips</strong> <br>£8.50</p>
+              </div>
             </div>
           </div>
 
-          <h4>Sides</h4>
-          <div class="row">
-            <div class="col-lg-3 col-md-3 col-sm-12">
-              <p><strong>Bap</strong> <br>£2.00</p>
+          <div class="menu-section">
+            <div class="menu-heading">
+              <h4>Sides</h4>
             </div>
-            <div class="col-lg-1 col-md-1 col-sm-12">
-              <hr/>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-              <p><strong>Noodles</strong> <br>£3.20</p>
-            </div>
-            <div class="col-lg-1 col-md-1 col-sm-12">
-              <hr/>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-12">
-              <p><strong>KFC</strong> <br>£5.20</p>
+
+            <div class="row">
+              <div class="col-lg-3 col-md-3 col-sm-12">
+                <p><strong>Bap</strong> <br>£2.00</p>
+              </div>
+              <div class="col-lg-1 col-md-1 col-sm-12">
+                <hr/>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-12">
+                <p><strong>Noodles</strong> <br>£3.20</p>
+              </div>
+              <div class="col-lg-1 col-md-1 col-sm-12">
+                <hr/>
+              </div>
+              <div class="col-lg-3 col-md-3 col-sm-12">
+                <p><strong>KFC</strong> <br>£5.20</p>
+              </div>
             </div>
           </div>
 
-          <h4>Drinks</h4>
-          <div class="row">
-            <div class="col-lg-3 col-md-3 col-sm-12">
-              <p><strong>Bottled Water</strong> <br>£2.00</p>
+          <div class="menu-section">
+            <div class="menu-heading">
+              <h4>Drinks</h4>
             </div>
-            <div class="col-lg-1 col-md-1 col-sm-12">
-              <hr/>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-              <p><strong>Soft Drink</strong> <br>£2.80</p>
-            </div>
-            <div class="col-lg-1 col-md-1 col-sm-12">
-              <hr/>
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-12">
-              <p><strong>Milk Drink</strong> <br>£2.50</p>
+
+            <div class="row">
+              <div class="col-lg-3 col-md-3 col-sm-12">
+                <p><strong>Bottled Water</strong> <br>£2.00</p>
+              </div>
+              <div class="col-lg-1 col-md-1 col-sm-12">
+                <hr/>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-12">
+                <p><strong>Soft Drink</strong> <br>£2.80</p>
+              </div>
+              <div class="col-lg-1 col-md-1 col-sm-12">
+                <hr/>
+              </div>
+              <div class="col-lg-3 col-md-3 col-sm-12">
+                <p><strong>Milk Drink</strong> <br>£2.50</p>
+              </div>
             </div>
           </div>
         </div>
