--- a/classwork/Resaurant/Home.html
+++ b/classwork/Resaurant/Home.html
@@ -2,8 +2,9 @@
 
 <!--
     Name: Aidan Smith
+    Assignment: Restaurant Site
     Date Created: 27/11/2020
-    Most recent revision: 27/11/2020
+    Most recent revision: 10/01/2021
 -->
 
 <html lang="en" style="text-align:center">
@@ -15,17 +16,18 @@
 
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
       <link href = "styles\styles.css" rel = "stylesheet" type="text/css">
-      <script src="https://kit.fontawesome.com/7ca58b5fbf.js" crossorigin="anonymous"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+      <link href = "styles\home.css" rel = "stylesheet" type="text/css">
     </head>
 
     <body>
 
 
-      <div class="wrapper" id="page" style="z-index:2">
+      <div class="wrapper" id="page">
+        <noscript>
+          You have javascript disabled. This will affect your viewing experience.
+        </noscript>
         <header class="section parallax bg1">
-          <div class="darken-pseudo darken-with-text fill">
+          <div class="darken darken-text fill">
             <div style="padding-top:300px; padding-left:10%;">
               <h1>The Restaurant</h1>
               <h2>Best Korean BBQ</h2>
@@ -38,7 +40,6 @@
           <a class = "btn fas fa-home" href="Home.html" id = "home" ></a>
           <a class = "btn fas fa-utensils" href="Menu.html" id = "menu"> </a>
           <a class = "btn fas fa-comment-dots" href="Contact Us.html" id = "contact"></a>
-          <div class = "clear-float"></div>
         </nav>
 
         <div class="news">
@@ -62,7 +63,7 @@
 
 
         <div class="section parallax bg2">
-          <div class="darken-pseudo2 darken-with-text fill">
+          <div class="darken2 darken-text fill">
               <div class="center small">
                 <p> This is a restaurant, it's nice and yummy. Come and eat, you will like it. Also, it's a Korean BBQ which everyone should try (and love).</p>
               </div>
@@ -70,73 +71,65 @@
         </div>
 
 
-        <div style = "height:2800px; position: relative;">
+        <div class="howtobox">
           <div id="howtoback1" class = "howtoback">
             <div id = "howto1" class="howto">
-              <div class="column">
-                <div class="hcentre">
-                  <p class="numberCircle circle1">1</p>
-                  <p class="rotate"><span>Come in</span> </p>
-                </div>
+              <div class="hcentre column">
+                <p class="numberCircle circle1">1</p>
+                <p class="rotate"><span>Come in</span> </p>
               </div>
-            </div>
-            <div class="info">
-              <p>Come in and wait to be seated. One of our friendly staff will great you by the door and walk you to your table as soon as it is free.</p>
-              <p>Don't be scared by your table's setup, it will not be like your normal restaurant.</p>
+              <div class="info">
+                <p>Come in and wait to be seated. One of our friendly staff will great you by the door and walk you to your table as soon as it is free.</p>
+                <p>Don't be scared by your table's setup, it will not be like your normal restaurant.</p>
+              </div>
             </div>
           </div>
           <div id="howtoback2" class = "howtoback">
             <div id = "howto2" class="howto">
-              <div class="column">
-                <div class="hcentre">
+              <div class="hcentre column">
                   <p class="numberCircle circle2">2</p>
                   <p class="rotate"><span>Order</span> </p>
-                </div>
               </div>
-            </div>
-            <div class="info">
-              <p>Your waiter will talk you through the menu and will give any suggestions if you wish.</p>
-              <p><a href="Menu.html">You can see our menu here.</a></p>
-              <p>Once you are ready, a waiter will come and take your order.</p>
+              <div class="info">
+                <p>Your waiter will talk you through the menu and will give any suggestions if you wish.</p>
+                <p><a href="Menu.html">You can see our menu here.</a></p>
+                <p>Once you are ready, a waiter will come and take your order.</p>
+              </div>
             </div>
           </div>
           <div id="howtoback3" class = "howtoback">
             <div id = "howto3" class="howto">
-              <div class="column">
-                <div class="hcentre">
-                  <p class="numberCircle circle3">3</p>
-                  <p class="rotate"><span>Cook your own</span> </p>
-                </div>
+              <div class="column hcentre">
+                <p class="numberCircle circle3">3</p>
+                <p class="rotate"><span>Cook your own</span> </p>
               </div>
-            </div>
-            <div class="info">
-              <p>While you wait for your main, a selection of complementary starters will be brought to your table.</p>
-              <p>Also, our waiters will transform your table into your bbq.</p>
-              <p>When your food is ready, it will be brought to you to cook, but don't worry, our staff will also be moving from table to table to help.</p>
+              <div class="info">
+                <p>While you wait for your main, a selection of complementary starters will be brought to your table.</p>
+                <p>Also, our waiters will transform your table into your bbq.</p>
+                <p>When your food is ready, it will be brought to you to cook, but don't worry, our staff will also be moving from table to table to help.</p>
+              </div>
             </div>
           </div>
           <div id="howtoback4" class = "howtoback">
             <div id = "howto4" class="howto">
-              <div class="column">
-                <div class="hcentre">
-                  <p class="numberCircle circle4">4</p>
-                  <p class="rotate"><span>Enjoy</span> </p>
-                </div>
+              <div class="column hcentre">
+                <p class="numberCircle circle4">4</p>
+                <p class="rotate"><span>Enjoy</span> </p>
               </div>
-            </div>
-            <div class="info">
-              <p>Now, just sit back and enjoy your food however you wish.</p>
+              <div class="info">
+                <p>Now, just sit back and enjoy your food however you wish.</p>
+              </div>
             </div>
           </div>
         </div>
 
 
-        <div id="review_carousel" class="carousel slide" data-ride="carousel" data-interval="false" style="position: relative; height:300px; background: white; padding-left:10%; padding-right:10%;">
+        <div id="review-carousel" class="carousel slide" data-ride="carousel" data-interval="false">
 
           <ul class="carousel-indicators">
-            <li data-target="#review_carousel" data-slide-to="0" class="active colour"></li>
-            <li data-target="#review_carousel" data-slide-to="1" class="colour"></li>
-            <li data-target="#review_carousel" data-slide-to="2" class="colour"></li>
+            <li data-target="#review-carousel" data-slide-to="0" class="active colour"></li>
+            <li data-target="#review-carousel" data-slide-to="1" class="colour"></li>
+            <li data-target="#review-carousel" data-slide-to="2" class="colour"></li>
           </ul>
 
           <div class="carousel-inner center">
@@ -163,20 +156,28 @@
             </div>
           </div>
 
-          <a class="carousel-control-prev" href="#review_carousel" data-slide="prev" style="z-index:3; color:black; font-size:30px;">
+          <a class="carousel-control-prev" href="#review-carousel" data-slide="prev" style="z-index:3; color:black; font-size:30px;">
             <i class="fas fa-chevron-left"></i>
           </a>
-          <a class="carousel-control-next" href="#review_carousel" data-slide="next"style="z-index:3; color:black; font-size:30px;">
+          <a class="carousel-control-next" href="#review-carousel" data-slide="next"style="z-index:3; color:black; font-size:30px;">
             <i class="fas fa-chevron-right"></i>
           </a>
 
         </div>
 
         <div class="section parallax bg3">
-            <div class="darken-pseudo darken-with-text fill" class="relative">
-                <div class="fix_bottom">
-                  <h3> The street, London, UK, SE1 00A </h3>
-                  <p> 020 555 1234 </p>
+            <div class="darken darken-text fill" class="relative">
+              <div class="fix-bottom left">
+                <p> The street, <br> Coventry, <br>UK <br>CV1 00A </p>
+                <br>
+                <p>admin@therestaurant.com</p>
+                <p> 024 5555 1234 </p>
+              </div>
+
+              <div class="fix-bottom right">
+                <p> <i class="fab fa-twitter"></i> @TheRestaurant</p>
+                <p> <i class="fab fa-facebook"></i> /TheRestaurantCoventry</p>
+                <p> <i class="fab fa-instagram"></i> /TheRestaurant</p>
               </div>
             </div>
 
@@ -190,109 +191,15 @@
 
 
 
-
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-        </script>
-        <noscript>
-            alert("You have javascript disabled. This will effect your viewing experience.");
-        </noscript>
-
-        <script>
-          document.querySelector('.wrapper').addEventListener('scroll',myFunction);
-          window.addEventListener('resize', resize);
-
-          var navbar = document.getElementById("navbar");
-          var howto1 = document.getElementById("howto1");
-          var howto2 = document.getElementById("howto2");
-          var howto3 = document.getElementById("howto3");
-          var howto4 = document.getElementById("howto4");
-          var page = document.getElementById("page");
-          var boat = document.getElementById("boat");
-          var near = document.getElementById("near");
-          var middle = document.getElementById("middle");
-          var far = document.getElementById("far");
-          var cloud1 = document.getElementById("cloud1");
-          var cloud2 = document.getElementById("cloud2");
-
-          var $foo = $("#page");
-          navbar.style.width = $foo.prop("clientWidth")+"px";
-
-          function resize() {
-            $foo = $("#page");
-            navbar.style.width = $foo.prop("clientWidth")+"px";
-          }
-
-          function myFunction() {
-
-            var windowTop = page.scrollTop;
-
-            if (page.scrollTop  >= 530) {
-              navbar.classList.add("sticky");
-              navbar.style.top = (page.scrollTop)+"px";
-            } else {
-              navbar.classList.remove("sticky");
-              navbar.style.top = 530 +"px";
-            }
-            if (page.scrollTop <= 3430){
-              if (page.scrollTop  >= 1530) {
-                howto1.style.top = (page.scrollTop + 90)+"px";
-              } else {
-                howto1.style.top = 1620 + "px";
-              }
-
-              if (page.scrollTop  >= 2130) {
-                howto2.style.top = (page.scrollTop + 90)+"px";
-              } else {
-                howto2.style.top = 2220 + "px";
-              }
-
-              if (page.scrollTop  >= 2730) {
-                howto3.style.top = (page.scrollTop + 90)+"px";
-              } else {
-                howto3.style.top = 2820 + "px";
-              }
-
-              if (page.scrollTop  >= 3330){
-                howto4.style.top = (page.scrollTop + 90)+"px";
-              } else {
-                howto4.style.top = 3420 + "px";
-              }
-            }
-
-            function scroll1 (){
-              page.scrollTo({top: 1530,  behavior: 'smooth'});
-            }
-            function scroll2 (){
-              page.scrollTo({top: 2130,  behavior: 'smooth'});
-            }
-            function scroll3 (){
-              page.scrollTo({top: 2730,  behavior: 'smooth'});
-            }
-            function scroll4 (){
-              page.scrollTo({top: 3330,  behavior: 'smooth'});
-            }
-            howto1.addEventListener("click", scroll1);
-            howto2.addEventListener("click", scroll2);
-            howto3.addEventListener("click", scroll3);
-            howto4.addEventListener("click", scroll4);
-
-            var leftboat = windowTop - 300;
-            boat.style.left= leftboat+"px";
-            near.style.left= -((windowTop*0.4)%40)+"px";
-            middle.style.left= -((windowTop*0.2)%40)+"px";
-            far.style.left= -((windowTop*0.1)%40)+"px";
-
-            cloud1.style.right= ((windowTop*0.1)-300)+"px";
-            cloud2.style.right= (-(windowTop*0.2)-1000)+"px";
+        <script src="https://kit.fontawesome.com/7ca58b5fbf.js" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <script src="scripts/home.js"></script>
+        <script src="scripts/nav_stick.js"></script>
 
 
-
-          }
-
-
-        </script>
     </body>
 </html>
