--- a/classwork/Resaurant/Menu.html
+++ b/classwork/Resaurant/Menu.html
@@ -2,8 +2,9 @@
 
 <!--
     Name: Aidan Smith
+    Assignment: Restaurant Site
     Date Created: 27/11/2020
-    Most recent revision: 27/11/2020
+    Most recent revision: 10/01/2021
 -->
 
 <html lang="en" style="text-align:center">
@@ -15,19 +16,17 @@
 
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
       <link href = "styles\styles.css" rel = "stylesheet" type="text/css">
+      <link href = "styles\menu.css" rel = "stylesheet" type="text/css">
 
-
-      <style>
-        hr{
-          border-color: #5b7d87;
-        }
-      </style>
     </head>
 
     <body>
-      <div class="wrapper" id="page" style="z-index:2">
+      <div class="wrapper" id="page">
+        <noscript>
+            You have javascript disabled. This will affect your viewing experience.
+        </noscript>
         <header class="section parallax bg1">
-          <div class="darken-pseudo darken-with-text fill">
+          <div class="darken darken-text fill">
             <div style="padding-top:300px; padding-left:10%;">
               <h1>The Restaurant</h1>
               <h2>Best Korean BBQ</h2>
@@ -40,17 +39,16 @@
           <a class = "btn fas fa-home" href="Home.html" id = "home" ></a>
           <a class = "btn fas fa-utensils" href="Menu.html" id = "menu"> </a>
           <a class = "btn fas fa-comment-dots" href="Contact Us.html" id = "contact"></a>
-          <div class = "clear-float"></div>
         </nav>
 
 
 
-        <div id="news_carousel" class="carousel slide" data-ride="carousel" data-interval="false" style="position: relative; height:300px; padding-left:10%; padding-right:10%;">
+        <div id="news-carousel" class="carousel slide" data-ride="carousel" data-interval="false" >
 
           <ul class="carousel-indicators">
-            <li data-target="#news_carousel" data-slide-to="0" class="active colour"></li>
-            <li data-target="#news_carousel" data-slide-to="1" class="colour"></li>
-            <li data-target="#news_carousel" data-slide-to="2" class="colour"></li>
+            <li data-target="#news-carousel" data-slide-to="0" class="active colour"></li>
+            <li data-target="#news-carousel" data-slide-to="1" class="colour"></li>
+            <li data-target="#news-carousel" data-slide-to="2" class="colour"></li>
           </ul>
 
           <div class="carousel-inner center">
@@ -67,10 +65,10 @@
             </div>
           </div>
 
-          <a class="carousel-control-prev" href="#news_carousel" data-slide="prev" style="z-index:3; color:black; font-size:30px;">
+          <a class="carousel-control-prev" href="#news-carousel" data-slide="prev" style="z-index:3; color:black; font-size:30px;">
             <i class="fas fa-chevron-left"></i>
           </a>
-          <a class="carousel-control-next" href="#news_carousel" data-slide="next"style="z-index:3; color:black; font-size:30px;">
+          <a class="carousel-control-next" href="#news-carousel" data-slide="next"style="z-index:3; color:black; font-size:30px;">
             <i class="fas fa-chevron-right"></i>
           </a>
 
@@ -163,19 +161,29 @@
               <i class="fas fa-chevron-down" id="chev3"></i>
             </div>
           </div>
+
+
         </div>
 
         <div class="section parallax bg3">
-            <div class="darken-pseudo darken-with-text fill" class="relative">
-                <div class="fix_bottom">
-                  <h3> The street, London, UK, SE1 00A </h3>
-                  <p> 020 555 1234 </p>
+            <div class="darken darken-text fill" class="relative">
+              <div class="fix-bottom left">
+                <p> The street, <br> Coventry, <br>UK <br>CV1 00A </p>
+                <br>
+                <p>admin@therestaurant.com</p>
+                <p> 024 5555 1234 </p>
+              </div>
+
+              <div class="fix-bottom right">
+                <p> <i class="fab fa-twitter"></i> @TheRestaurant</p>
+                <p> <i class="fab fa-facebook"></i> /TheRestaurantCoventry</p>
+                <p> <i class="fab fa-instagram"></i> /TheRestaurant</p>
               </div>
             </div>
 
         </div>
 
-          </div>
+      </div>
 
           <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -183,144 +191,8 @@
           <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
           <script src="https://kit.fontawesome.com/7ca58b5fbf.js" crossorigin="anonymous"></script>
           <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-          <noscript>
-              alert("You have javascript disabled. This will effect your viewing experience.");
-          </noscript>
+          <script src="scripts/menu.js"></script>
+          <script src="scripts/nav_stick.js"></script>
 
-          <script>
-            document.querySelector('.wrapper').addEventListener('scroll',myFunction);
-            window.addEventListener('resize', resize);
-
-            var navbar = document.getElementById("navbar");
-            var howto1 = document.getElementById("howto1");
-            var howto2 = document.getElementById("howto2");
-            var howto3 = document.getElementById("howto3");
-            var howto4 = document.getElementById("howto4");
-            var page = document.getElementById("page");
-            var boat = document.getElementById("boat");
-            var near = document.getElementById("near");
-            var middle = document.getElementById("middle");
-            var far = document.getElementById("far");
-            var cloud1 = document.getElementById("cloud1");
-            var cloud2 = document.getElementById("cloud2");
-
-            var $foo = $("#page");
-            navbar.style.width = $foo.prop("clientWidth")+"px";
-
-            function resize() {
-              $foo = $("#page");
-              navbar.style.width = $foo.prop("clientWidth")+"px";
-            }
-
-            function myFunction() {
-
-              var windowTop = page.scrollTop;
-
-              if (page.scrollTop  >= 530) {
-                navbar.classList.add("sticky");
-                navbar.style.top = (page.scrollTop)+"px";
-              } else {
-                navbar.classList.remove("sticky");
-                navbar.style.top = 530 +"px";
-              }
-              if (page.scrollTop <= 3430){
-                if (page.scrollTop  >= 1530) {
-                  howto1.style.top = (page.scrollTop + 90)+"px";
-                } else {
-                  howto1.style.top = 1620 + "px";
-                }
-
-                if (page.scrollTop  >= 2130) {
-                  howto2.style.top = (page.scrollTop + 90)+"px";
-                } else {
-                  howto2.style.top = 2220 + "px";
-                }
-
-                if (page.scrollTop  >= 2730) {
-                  howto3.style.top = (page.scrollTop + 90)+"px";
-                } else {
-                  howto3.style.top = 2820 + "px";
-                }
-
-                if (page.scrollTop  >= 3330){
-                  howto4.style.top = (page.scrollTop + 90)+"px";
-                } else {
-                  howto4.style.top = 3420 + "px";
-                }
-              }
-
-              function scroll1 (){
-                page.scrollTo({top: 1530,  behavior: 'smooth'});
-              }
-              function scroll2 (){
-                page.scrollTo({top: 2130,  behavior: 'smooth'});
-              }
-              function scroll3 (){
-                page.scrollTo({top: 2730,  behavior: 'smooth'});
-              }
-              function scroll4 (){
-                page.scrollTo({top: 3330,  behavior: 'smooth'});
-              }
-              howto1.addEventListener("click", scroll1);
-              howto2.addEventListener("click", scroll2);
-              howto3.addEventListener("click", scroll3);
-              howto4.addEventListener("click", scroll4);
-
-              var leftboat = windowTop - 300;
-              boat.style.left= leftboat+"px";
-              near.style.left= -((windowTop*0.4)%40)+"px";
-              middle.style.left= -((windowTop*0.2)%40)+"px";
-              far.style.left= -((windowTop*0.1)%40)+"px";
-
-              cloud1.style.right= ((windowTop*0.1)-300)+"px";
-              cloud2.style.right= (-(windowTop*0.2)-1000)+"px";
-
-
-
-            }
-
-
-          </script>
-
-          <script>
-            var which = 0;
-            var chev = [0];
-
-            for (var i=1; i<4; i++){
-              $("#Content"+i).slideUp();
-              chev.push(document.getElementById('chev'+i));
-            }
-
-            var open = false;
-
-
-            function myAccordion(id) {
-              $("#Content"+id).slideDown(350);
-              $("#Content"+which).slideUp(350);
-
-              chev[id].className = 'fa fa-chevron-down open';
-              chev[which].className = 'fa fa-chevron-down';
-
-              if (which == id){
-                which=0;
-              } else {
-                which=id;
-              }
-            }
-
-            document.getElementById("Accordion1").addEventListener("click", function(){myAccordion(1)}, false);
-            document.getElementById("Accordion2").addEventListener("click", function(){myAccordion(2)}, false);
-            document.getElementById("Accordion3").addEventListener("click", function(){myAccordion(3)}, false);
-            document.getElementById("pull1").addEventListener("click", function(){myAccordion(1)}, false);
-            document.getElementById("pull2").addEventListener("click", function(){myAccordion(2)}, false);
-            document.getElementById("pull3").addEventListener("click", function(){myAccordion(3)}, false);
-            document.getElementById("Content1").addEventListener("click", function(){myAccordion(1)}, false);
-            document.getElementById("Content2").addEventListener("click", function(){myAccordion(2)}, false);
-            document.getElementById("Content3").addEventListener("click", function(){myAccordion(3)}, false);
-
-
-
-
-          </script>
     </body>
 </html>
