Adding final touches

--- a/classwork/Resaurant/Contact Us.html
+++ b/classwork/Resaurant/Contact Us.html
@@ -13,11 +13,11 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
       <title>Contact us</title>
+      <link rel="icon" href="images/house.png">
 
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
       <link href = "styles\styles.css" rel = "stylesheet" type="text/css">
       <link href = "styles\contact_form.css" rel = "stylesheet" type="text/css">
-
     </head>
 
     <body>
@@ -25,6 +25,7 @@
         <noscript>
             You have javascript disabled. This will affect your viewing experience.
         </noscript>
+
 
         <header class="section parallax bg1">
           <div class="darken darken-text fill">
@@ -42,6 +43,7 @@
           <a class = "btn fas fa-comment-dots" href="Contact Us.html" id = "contact"></a>
         </nav>
 
+
         <div id="news-carousel" class="carousel slide" data-ride="carousel" data-interval="false">
 
           <ul class="carousel-indicators">
@@ -56,9 +58,11 @@
                 <strong><i class="fas fa-people-carry"></i> We're opening a new location! <i class="fas fa-people-carry"></i></strong>
               </a>
             </div>
+
             <div class="carousel-item christmas" >
               <strong>We're rolling out our seasonal menu, with special options for this season.</strong>
             </div>
+
             <div class="carousel-item">
               <strong> <i class="fas fa-cocktail"></i> The Drink of the Month is TSG Special Brew. <i class="fas fa-cocktail"></i></strong>
             </div>
@@ -73,9 +77,11 @@
 
         </div>
 
+
         <div class="page-title">
           <h4>Contact Us</h4>
         </div>
+
 
         <div class="form">
           <form name="contact-us" class="needs-validation" onsubmit="return validate();" onreset="resetView();" novalidate style="width: 80%">
@@ -161,6 +167,7 @@
           </form>
         </div>
 
+
         <div class="section parallax bg3">
             <div class="darken darken-text fill" class="relative">
               <div class="fix-bottom left">
@@ -176,7 +183,6 @@
                 <p> <i class="fab fa-instagram"></i> /TheRestaurant</p>
               </div>
             </div>
-
         </div>
 
       </div>
