--- a/classwork/Resaurant/Home.html
+++ b/classwork/Resaurant/Home.html
@@ -13,6 +13,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
       <title>Home Page</title>
+      <link rel="icon" href="images/house.png">
 
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
       <link href = "styles\styles.css" rel = "stylesheet" type="text/css">
@@ -21,11 +22,12 @@
 
     <body>
 
-
       <div class="wrapper" id="page">
         <noscript>
           You have javascript disabled. This will affect your viewing experience.
         </noscript>
+
+
         <header class="section parallax bg1">
           <div class="darken darken-text fill">
             <div style="padding-top:300px; padding-left:10%;">
@@ -41,6 +43,7 @@
           <a class = "btn fas fa-utensils" href="Menu.html" id = "menu"> </a>
           <a class = "btn fas fa-comment-dots" href="Contact Us.html" id = "contact"></a>
         </nav>
+
 
         <div class="news">
       	   <h4>Big News</h4>
@@ -65,7 +68,9 @@
         <div class="section parallax bg2">
           <div class="darken2 darken-text fill">
               <div class="center small">
-                <p> This is a restaurant, it's nice and yummy. Come and eat, you will like it. Also, it's a Korean BBQ which everyone should try (and love).</p>
+                <p> This is a Korean BBQ restaurant. </p>
+                <p> The food is given to you raw and will be cooked at your table (by you or a member of staff).</p>
+                <p> It's a unique eating experience which everyone can enjoy.</p>
               </div>
           </div>
         </div>
@@ -84,6 +89,7 @@
               </div>
             </div>
           </div>
+
           <div id="howtoback2" class = "howtoback">
             <div id = "howto2" class="howto">
               <div class="hcentre column">
@@ -97,6 +103,7 @@
               </div>
             </div>
           </div>
+
           <div id="howtoback3" class = "howtoback">
             <div id = "howto3" class="howto">
               <div class="column hcentre">
@@ -110,6 +117,7 @@
               </div>
             </div>
           </div>
+
           <div id="howtoback4" class = "howtoback">
             <div id = "howto4" class="howto">
               <div class="column hcentre">
@@ -140,6 +148,7 @@
                 <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
               </a>
             </div>
+
             <div class="carousel-item">
               <a href="https://www.google.com/maps/contrib/111310809322185586726/place/ChIJwZ10jLtLd0gRBHU7oU-MgEE/@52.40996,-10.4729858,5z/data=!4m6!1m5!8m4!1e1!2s111310809322185586726!3m1!1e1?hl=en-GB" id = "review" target="_blank">
               <p> <i class="fas fa-user-alt"></i> Emily Thompson</p>
@@ -147,6 +156,7 @@
               <p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
               </a>
             </div>
+
             <div class="carousel-item">
               <a href="https://www.google.com/maps/contrib/106648280435057884435/place/ChIJwZ10jLtLd0gRBHU7oU-MgEE/@52.4131315,-1.5688978,11z/data=!4m6!1m5!8m4!1e1!2s106648280435057884435!3m1!1e1?hl=en-GB" id = "review" target="_blank">
               <p> <i class="fas fa-user-alt"></i> Holly T</p>
@@ -183,12 +193,6 @@
 
         </div>
     </div>
-
-
-
-
-
-
 
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
