--- a/classwork/Resaurant/Menu.html
+++ b/classwork/Resaurant/Menu.html
@@ -13,11 +13,11 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
       <title>Menu</title>
+      <link rel="icon" href="images/house.png">
 
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
       <link href = "styles\styles.css" rel = "stylesheet" type="text/css">
       <link href = "styles\menu.css" rel = "stylesheet" type="text/css">
-
     </head>
 
     <body>
@@ -25,6 +25,8 @@
         <noscript>
             You have javascript disabled. This will affect your viewing experience.
         </noscript>
+
+
         <header class="section parallax bg1">
           <div class="darken darken-text fill">
             <div style="padding-top:300px; padding-left:10%;">
@@ -40,7 +42,6 @@
           <a class = "btn fas fa-utensils" href="Menu.html" id = "menu"> </a>
           <a class = "btn fas fa-comment-dots" href="Contact Us.html" id = "contact"></a>
         </nav>
-
 
 
         <div id="news-carousel" class="carousel slide" data-ride="carousel" data-interval="false" >
@@ -83,6 +84,7 @@
             <div class="menu-heading" id="Accordion1">
               <h4>Meat</h4>
             </div>
+
             <div class="row" id="Content1">
               <div class="col-lg-3 col-md-3 col-sm-12">
                 <p><strong>BBQ Pork Belly</strong> <br>£8.20</p>
@@ -105,6 +107,7 @@
               <i class="fas fa-chevron-down" id="chev1"></i>
             </div>
           </div>
+
 
           <div class="menu-section" id = "menu-section2">
             <div class="menu-heading" id="Accordion2">
@@ -134,6 +137,7 @@
             </div>
           </div>
 
+
           <div class="menu-section" id = "menu-section3">
             <div class="menu-heading" id="Accordion3">
               <h4>Drinks</h4>
@@ -141,13 +145,13 @@
 
             <div class="row" id="Content3">
               <div class="col-lg-3 col-md-3 col-sm-12">
-                <p><strong>Bottled Water</strong> <br>£2.00</p>
+                <p><strong>Bottled Water</strong> <br> Pure spring water. <br>£2.00</p>
               </div>
               <div class="col-lg-1 col-md-1 col-sm-12">
                 <hr/>
               </div>
               <div class="col-lg-4 col-md-4 col-sm-12">
-                <p><strong>Soft Drink</strong> <br>£2.80</p>
+                <p><strong>Soft Drink</strong> <br> A full range of soft drinks. <br>£2.80</p>
               </div>
               <div class="col-lg-1 col-md-1 col-sm-12">
                 <hr/>
@@ -161,9 +165,8 @@
               <i class="fas fa-chevron-down" id="chev3"></i>
             </div>
           </div>
-
-
         </div>
+
 
         <div class="section parallax bg3">
             <div class="darken darken-text fill" class="relative">
